--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
 
   zookeeper:
     container_name: zookeeper
+    restart: always
     image: confluentinc/cp-zookeeper:7.2.0
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
@@ -56,7 +57,7 @@ services:
 
   kafka_ui:
     image: provectuslabs/kafka-ui:latest
-    restart: on-failure
+    restart: always
     ports:
       - '9093:8080'
     depends_on:
@@ -70,6 +71,7 @@ services:
 
   kafka:
     container_name: kafka
+    restart: always
     image: confluentinc/cp-kafka:7.2.0
     depends_on:
       - zookeeper
