--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,4 +56,10 @@ jobs:
                       
                         unzip -o deploy.zip -d app
                       
+                        cd app
+                      
+                        docker compose up -d --build
+                      
+                        cd ..
+                      
                         rm -rf deploy.zip
